appId: com.moniva.moniNote
env:
  TEST_PASSWORD: "TestPass123!"
---
- launchApp:
    clearState: true
- runScript: ../scripts/generate-test-email.js
- extendedWaitUntil:
    visible: "Get started"
    timeout: 10000
- tapOn: "Get started"
- assertVisible: "Create account"
- tapOn:
    id: "input.email"
- inputText: ${output.email}
- tapOn:
    id: "input.password"
- inputText: ${TEST_PASSWORD}
- tapOn:
    id: "input.confirmPassword"
- inputText: ${TEST_PASSWORD}
- hideKeyboard
- tapOn: "Continue"
- assertVisible: "Please confirm your email to continue experiencing MoniNotes"
- runScript:
    file: ../scripts/get-confirmation-link.js
    env:
      INBOX_EMAIL: ${output.email}
- openLink: ${output.link}
- assertVisible: "Email confirmed successfully"
- launchApp
- assertVisible: "Email verified"
- tapOn: "Continue"
- assertNotVisible: "Please confirm your email to continue experiencing MoniNotes"
